WIP: start fixing tabs component, add more spacing classes, and update .subheading

--- a/public/scss/base/_type.scss
+++ b/public/scss/base/_type.scss
@@ -130,7 +130,6 @@ h6 {
   line-height: 130%;
   color: var(--black);
   font-size: 1.266rem;
-  text-transform: uppercase;
 }
 
 .secondary-text.small {
