--- a/public/scss/postup/_tabs.scss
+++ b/public/scss/postup/_tabs.scss
@@ -1,63 +1,171 @@
-.tabs {
-    min-width: 100%;
-  }
-  .tabs.iterations {
-    border-radius: 8px;
-    margin-bottom: 0;
-    margin-top: 0;
-  }
-  .container-tab {
-    background-color: transparent;
-    border-bottom: 0 solid #000;
-    border-bottom-right-radius: 0;
-    border-right: 0 solid #000;
-    border-top: 0 solid #000;
-    margin-right: 0;
-    padding-left: 16px;
-    padding-right: 16px;
+.tabs-container {
+  width: 100%;
+  @extend .mt-32;
+  border-radius: 4rem;
+  overflow: hidden;
+  height: 3.5rem;
+  text-decoration: uppercase;
+  background-color: #e6e6e6;
+  padding: 0.5rem;
+}
+
+.tabs-menu {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  border-bottom: 0 solid var(--blue-accent);
+  padding-bottom: 0;
+  overflow: hidden;
+  width: 100%;
+}
+
+// Individual tabs
+.tab {
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+  border-radius: 3.5rem;
+  text-decoration: uppercase;
+  height: 3rem;
+  
+
+  p {
+    width: 100%;
     text-align: center;
-    width: 50%;
+    font-weight: 500;
+    text-decoration: uppercase;
   }
-  .container-tab.w--current {
+}
+
+.active-tab {
+  background-color: $primary-color;
+  
+  p {
+    color: #ffffff;
+    margin: auto 0;
+    text-decoration: uppercase;
+  }
+
+  &.tastebuds {
     background-color: var(--blue-accent);
     border-bottom: 0 solid var(--blue-accent);
     border-radius: 8px;
     border-top-color: var(--blue-accent);
-    color: var(--white);
+    color: #ffffff;
     margin-right: 0;
     padding-left: 16px;
     padding-right: 16px;
     text-align: center;
     width: 50%;
   }
-  .container-tab._50 {
-    color: var(--black);
-    font-size: 1.125rem;
-    font-weight: 500;
-    text-transform: uppercase;
-  }
-  .container-tab._50.w--current {
-    color: var(--white);
-  }
-  .container-tab._33 {
-    width: 33.3%;
-  }
-  .container-tab._33.w--current {
-    color: var(--white);
-  }
-  .tab-pane-tab-3 {
-    padding: 40px 0 0;
-  }
-  .tabs-menu {
-    background-color: #e6e6e6;
-    border-bottom: 0 solid var(--blue-accent);
-    border-radius: 8px;
-    padding-bottom: 0;
-  }
-  .tabs-menu._2-columns {
-    background-color: #e6e6e6;
-    border-bottom-width: 0;
-    border-radius: 8px;
-    height: 40px;
-    overflow: hidden;
-  }
+}
+
+// Tab content
+.tab-pane-tab-1 {
+  padding-top: 40px;
+}
+
+.w-tab-pane {
+  display: none;
+  position: relative;
+}
+.w--tab-active {
+  display: block;
+}
+
+// Tab 1
+.image-195 {
+  align-self: auto;
+  max-width: 224.5px;
+}
+.div-block-201 {
+  align-items: center;
+  display: flex;
+  flex: 0 auto;
+  grid-column-gap: 24px;
+  grid-row-gap: 24px;
+  justify-content: space-between;
+}
+
+//
+.tab-pane-tab-3 {
+  padding: 40px 0 0;
+}
+
+.tab-link-30 {
+  background-color: transparent;
+  border-radius: 0 8px 8px 0;
+  min-width: 33.3%;
+  text-align: center;
+  width: auto;
+}
+
+.w--current {
+  background-color: var(--blue-accent);
+  border-radius: 8px;
+  color: #ffffff;
+  text-align: center;
+  width: 33.3%;
+}
+
+.tab-link-30._50 {
+  min-width: 0%;
+  width: 50%;
+}
+
+.container-tab._50 {
+  color: var(--black);
+  font-size: 1.125rem;
+  font-weight: 500;
+  text-transform: uppercase;
+}
+
+.container-tab._50.w--current {
+  color: #ffffff;
+}
+
+.container-tab._33 {
+  width: 33.3%;
+}
+
+.container-tab._33.w--current {
+  color: #ffffff;
+}
+
+.w-inline-block {
+  display: inline-block;
+  max-width: 100%;
+}
+
+.w-tabs {
+  position: relative;
+}
+
+.w-tabs:before,
+.w-tabs:after {
+  content: " ";
+  display: table;
+  grid-area: 1/1/2/2;
+}
+.w-tabs:after {
+  clear: both;
+}
+
+.w-tab-menu {
+  position: relative;
+}
+
+.w--current {
+  background-color: $primary-color;
+  border-radius: 8px;
+  color: #ffffff;
+  text-align: center;
+}
+
+.w-tab-link:focus {
+  outline: 0;
+}
+.w-tab-content {
+  display: block;
+  overflow: hidden;
+  position: relative;
+}
