--- a/public/scss/utilities/_spacing.scss
+++ b/public/scss/utilities/_spacing.scss
@@ -61,8 +61,22 @@
 }
 
 // Margin-top
-.mt-0 {
-  margin-top: 0;
+.mt {
+  &-0 {
+    margin-top: 0;
+  }
+
+  &-24 {
+    margin-top: 1.5rem;
+  }
+
+  &-32 {
+    margin-top: 2rem;
+  }
+
+  &-40 {
+    margin-top: 2.5rem;
+  }
 }
 
 .pt {
